# worldbank_playwright

./: README.md  config.py  conftest.py  pyproject.toml
.github/workflows/: github-ci.yml
components/: average_income_shortfall_line_chart.py  base_chart.py  base_table.py  economies_with_hgh_inequality_line_chart.py  end_extreme_poverty_line_chart.py
pages/: base_page.py  home_page.py  indicator_detail_SI_DST_INEQ_page.py  indicator_detail_SI_POV_DDAY_TO_page.py  indicator_detail_SI_POV_PROS_page.py  vision_page.py
tests/: test_verify_line_chart.py  test_vision_indicator_detail.py
utils/: spreadsheets.py
