[tool.poetry]
name = "worldbank-playwright"
version = "0.1.0"
authors = ["Jval Shah <jval.n.shah@gmail.com>"]
description = "demo project to show various concepts in Playwright Python"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-playwright = "^0.4.3"
playwright = "^1.39.0"
openpyxl = "^3.1.5"
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.6"
pandas = "^2.2.3"
flake8 = "^7.2.0"
allure-pytest = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--clean-alluredir",
    "--alluredir=allure-results",
    "--color=yes",
    "--browser-channel=chrome",
    "--video=retain-on-failure",
    "--tracing=retain-on-failure"
]
[tool.isort]
profile = "black"
skip = ["env", "venv"]